# btc-traffic

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
nix/: bitcoin.nix  devshell.nix  rust.nix
src/: main.rs
src/utils/: create_block.rs  create_coinbase.rs  create_transaction.rs  mod.rs  mutated_block.rs  self_transfer.rs  wallet_funds.rs
