[package]
authors = ["Edil Medeiros <jose.edil@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "btc-traffic"
description = "A tiny traffic generator for bitcoin regtest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
corepc-node = { package = "corepc-node", version = "0.8.0", features = ["29_0"] }
tokio = { version = "1.46.1", features = ["full"] }
